# TISE

./: .flake8  .gitignore  .pylintrc  CHANGELOG.md  Cargo.toml  README.md  pyinstaller.spec  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: build-windows-exe.yml  build.yml  ci.yml  release.yml
examples/: PrunedGameMore.json
src/: gui.rs  lib.rs  main.rs  save.rs  statics.rs  value.rs
tests/: indexing.rs  line_endings.rs  mutation.rs  roundtrip.rs
tise/: __init__.py  app.py  statics.py
