[tool.poetry]
name = "tise"
version = "1.0.0"
description = "TISE: Terra Invicta Save Editor"
authors = ["Jake Staehle <jacob@staehle.us>"]
license = "GPLv2"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1, <3.12"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pylint = "^2.17.4"
black = "^23.3.0"
pyinstaller = "^5.12.0"

[tool.poetry.scripts]
tise = "tise:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.pylint.format]
max-line-length = 120